# Uranium

./: .gitignore  CMakeLists.txt
UM/: Application.py  Preferences.py  Resources.py  i18n.py
UM/Backend/: Backend.py
UM/Qt/: ListModel.py  QtApplication.py
UM/Qt/Bindings/: ApplicationProxy.py  MachinesModel.py  SettingCategoriesModel.py  SettingsFromCategoryModel.py  SettingsModel.py  Theme.py
UM/Qt/qml/UM/Preferences/: GeneralPage.qml  PreferencesDialog.qml
UM/Qt/qml/UM/Settings/: SettingItem.qml  SettingTextFieldFloat.qml  SettingView.qml
UM/Scene/: Platform.py
UM/Settings/: MachineSettings.py
plugins/LocalFileStorage/: LocalFileStorageDevice.py
plugins/UpdateChecker/: UpdateChecker.py  __init__.py
resources/i18n/: uranium.pot
resources/i18n/es/: uranium.po
resources/i18n/pt/: uranium.po  uranium_qt.po
